fixed keys display alignment

--- a/apps/bpi/src/app/game/game.component.scss
+++ b/apps/bpi/src/app/game/game.component.scss
@@ -13,8 +13,8 @@
   max-width: 50rem;
   display: flex;
   align-items: center;
-  margin: 2rem 0 1rem 0;
-  padding: 0 1.5rem 0 1.5rem;
+  margin: 0 auto;
+  padding: 2rem 1.5rem 1rem 1.5rem;
 
   span {
     color: #fff;
